# adjacent_numbers_copy_kde

./: CMakeLists.txt  Main.qml  adjacent_no_copy.qml  logic.js  main.cpp  nav_keyB_dragM.qml  row_nav_child_navkeyB.qml
